--- a/template/src/index.html
+++ b/template/src/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+  <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://unpkg.com/vue-material/dist/vue-material.css">
+  <link rel="stylesheet" href="./css/main.css">
   <title>Hello World</title>
 </head>
 <body>
   <div id="app-main">
-    <router-view>Loading...</router-view>
+    <md-toolbar>
+      <h1 class="md-title">It works!</h1>
+    </md-toolbar>
+    <div class="main-content">
+      <router-view>Loading...</router-view>
+    </div>
   </div>
   <script src="main.js"></script>
 </body>
